# Lead-Enrichment-Project

./: .gitignore  README.md  app.py  convert_to_fps_format.py  pyproject.toml
config/: enrichment_config.json
data/processed/: test.py
data/scraped_data/debug/: 00000_scott_anderson_detail.html  00000_scott_anderson_results.html  00001_michael_engle_detail.html  00001_michael_engle_results.html  00002_andrzej_paczynski_detail.html  00002_andrzej_paczynski_results.html  00004_mary_henninger_detail.html  00004_mary_henninger_results.html  00005_ronald_betty-dunlap_detail.html  00005_ronald_betty-dunlap_results.html  00006_jean_matthews_detail.html  00006_jean_matthews_results.html  00007_christopher_houk-the-christopher-d-houk-trust_detail.html  00007_christopher_houk-the-christopher-d-houk-trust_results.html  00008_huaxiang_zhang_detail.html  00008_huaxiang_zhang_results.html  00009_justine_saca_detail.html  00009_justine_saca_results.html
lead_enrichment/: __init__.py
pages/: 1_Upload_and_Inspect.py  2_Parameter_Form.py
src/enrich/: __init__.py  enrichment_orchestrator.py
src/preprocessing/: __init__.py  farm_report_processor.py
src/scorer/: __init__.py
src/scraping/: __init__.py  fps_scraper_chrome.py  fps_scraper_edge.py
src/utils/: __init__.py
